<resources>
    <string name="app_name">Avaliacao1Parte2</string>
    <string name="modificar_lbl">Modificar meus dados</string>
    <string name="nome_lbl">Nome:</string>
    <string name="name_lbl">Sem nome</string>
    <string name="sexolbl">Sexo:</string>
    <string name="sxlbl">Não informado</string>
    <string name="idadelbl">Idade:</string>
    <string name="idadelabel">Não informado</string>
    <string name="modLbl">Modificar meus dados</string>
    <string name="mascLBL">Masculino</string>
    <string name="femLBL">Feminino</string>
    <string name="salvarLBL">Salvar</string>
</resources>
